:sparkles: Feat: 다음 주소 API 데이터 상향식 통신 구조변경

--- a/src/styles/css/components/Auth/Address/DaumAddress.module.css
+++ b/src/styles/css/components/Auth/Address/DaumAddress.module.css
@@ -9,7 +9,8 @@
 }
 
 .daum-address__cancle {
-  width: 700px;
+  width: 100%;
+  max-width: 700px;
   height: 45px;
   display: flex;
   justify-content: end;
