:lipstick: Design: 결제 수단 컴포넌트 디자인 일부 수정

--- a/src/styles/css/components/Payments/PaymentsType.module.css
+++ b/src/styles/css/components/Payments/PaymentsType.module.css
@@ -1,10 +1,10 @@
 .payments-type__text {
   text-align: center;
+  margin-bottom: 30px;
 }
 
 .payments-type__list {
   text-align: center;
-  transform: translateY(50px);
 }
 
 .payments-type__kakaopay {
