탑메뉴 클래스명 수정,전체 가로 모드 모바일 반응형 css 추가

--- a/src/styles/css/components/Footer/Footer.module.css
+++ b/src/styles/css/components/Footer/Footer.module.css
@@ -30,7 +30,7 @@
   padding-left: 15px;
 }
 
-.logo {
+.fot_logo {
     width: 81px;
     font-family: 'Nanum Pen Script', cursive;
     font-size: 32px;
