--- a/src/styles/css/components/Banner/MainSlides.module.css
+++ b/src/styles/css/components/Banner/MainSlides.module.css
@@ -29,3 +29,12 @@
      margin-top: 93px;
   }
 }
+
+/*가로모드 모바일 디바이스*/
+@media screen and (min-width: 576px) {
+  .slides {
+    max-width: 460px;
+    margin: 0 auto;
+    margin-top: 93px;
+ }
+}
