--- a/src/styles/css/components/Category/Category.module.css
+++ b/src/styles/css/components/Category/Category.module.css
@@ -121,3 +121,44 @@
     border-radius: 50%;
   }
 }
+
+/*가로모드 모바일 디바이스*/
+@media screen and (min-width: 576px) {
+  .category {
+    width: 600px;
+    height: 200px;
+    /* margin: 0 auto; */
+    padding-top: 13px;
+  }
+  
+  .category_ul {
+    display: grid;
+    grid-template-columns: 120px 120px 120px 120px;
+    line-height: 25px;
+    margin-left: -39px;
+  }
+  
+  .category_item {
+    text-align: center;
+    margin: 0 auto;
+    width: 53px;
+    padding-bottom: 10px;
+    list-style-type : none;
+    
+  }
+  
+  .category_link {
+    text-decoration: none;
+    color: #666666;
+    font-size: 12px;
+    margin: 0 auto;
+  }
+  
+  .category_img {
+    width: 50px;
+    height: 50px;
+    margin: 0 auto;
+    text-align: center;
+    border-radius: 50%;
+  }
+}
