--- a/src/styles/css/components/Category/SnackSlide.module.css
+++ b/src/styles/css/components/Category/SnackSlide.module.css
@@ -256,3 +256,88 @@
   }
 }
 
+/*가로모드 모바일 디바이스*/
+@media screen and (min-width: 576px) {
+  .snack_Slide {
+    position: relative;
+    width: 1230px;
+    height: 500px;
+    /* background-color: #008e61; */
+    margin: 0 auto;
+  }
+
+  .snack_Slide_hea {
+    position: relative;
+    width: 1100px;
+    margin: 0 auto;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    color: #333; 
+  }
+  
+  .snack_Slide_prd{
+    display: grid;
+    grid-template-columns: 230px 230px 230px 230px 230px;
+    max-width: 1230px;
+    width: 56%;
+    /* margin: 0 auto; */
+  }
+  
+  .product_link {
+    height: 340px;
+    /* background-color: #fff; */
+    text-decoration: none;
+    color: #000;
+    font-family: 'Noto Sans KR', sans-serif;
+  }
+  
+  .product_img {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 200px;
+  }
+  
+  .productinfo {
+    font-size: 12px;
+  }
+  
+  .productinfo_1 {
+    display: flex;
+    flex-direction: row;
+    line-height: 0px;
+    font-size: 14px;
+    font-weight: 700;
+    color: #ff661b;
+  }
+  .productinfo_1_2 {
+     margin-left: 5px;
+     color: #000;
+  }
+  
+  .productinfo_2 {
+    display: flex;
+    flex-direction: row;
+    font-size: 14px;
+    color: #008e61;
+    font-weight: 700;
+  }
+  
+  .productinfo_2_2 {
+    margin-left: 5px;
+    color: #ea2f48;
+  }
+  
+  .productinfo_icon {
+     margin-left: 71px;
+     margin-top: 10px;
+     font-weight: 700;
+     font-size: 20px;
+     color: #000;
+  }
+  .productinfo_icon1 {
+    margin-right: 11px;
+  }
+}
+
