--- a/src/styles/css/components/Header/Header.module.css
+++ b/src/styles/css/components/Header/Header.module.css
@@ -103,3 +103,29 @@
   }
   
 }
+
+/*가로모드 모바일 디바이스*/
+@media screen and (min-width: 576px) {
+  .header {
+    position: relative;
+    top: -93px;
+    width: 100%;
+    max-width: 600px;
+    height: 200px;
+    background-color: #fff;
+}
+
+.contents {
+  width: 95%;
+  height: 110px;
+  max-width:600px;
+  padding-top: 15px;
+  border-bottom: 2px solid #918D8C;
+}
+
+.logo {
+  font-family: 'Nanum Pen Script', cursive;
+  font-size: 45px;
+  color: #008e61;
+}
+}
