헤더 상단 베너 삭제 기능 & css 수정

--- a/src/styles/css/components/Banner/MainSlides.module.css
+++ b/src/styles/css/components/Banner/MainSlides.module.css
@@ -30,7 +30,7 @@
   }
 }
 
-/*가로모드 모바일 디바이스*/
+/*가로모드 모바일 디바이스
 @media screen and (min-width: 576px) {
   .slides {
     max-width: 460px;
@@ -38,3 +38,4 @@
     margin-top: 93px;
  }
 }
+*/
