--- a/src/styles/css/components/Header/Header.module.css
+++ b/src/styles/css/components/Header/Header.module.css
@@ -104,7 +104,7 @@
   
 }
 
-/*가로모드 모바일 디바이스*/
+/*가로모드 모바일 디바이스
 @media screen and (min-width: 576px) {
   .header {
     position: relative;
@@ -129,3 +129,4 @@
   color: #008e61;
 }
 }
+*/
