--- a/src/styles/css/components/Banner/HeaderBan.module.css
+++ b/src/styles/css/components/Banner/HeaderBan.module.css
@@ -2,9 +2,12 @@
 
  /* 상단 베너 */
  .banner {
-  position: fixed;
+  position: relative;
+  left: 35px;
+  top: 13px;
   width: 100%;
-  height: 39px;
+  max-width: 1190px;
+  height: 37px;
   background-color: #008e61;
 } 
 
@@ -19,10 +22,10 @@
 }
 
 .icon {
-  position: fixed;
+  position: absolute;
   right: 30px;
-  top: 11px;
+  top: 17px;
   cursor: pointer;
   z-index: 10;
-  /* color: white; */
+ color: white; 
 }
