--- a/src/styles/css/pages/NavBar.module.css
+++ b/src/styles/css/pages/NavBar.module.css
@@ -234,9 +234,9 @@
   
 }
 
-/*가로모드 모바일 디바이스*/
+/* 가로모드 모바일 디바이스
 @media screen and (min-width: 576px) {
-  /*nav 메뉴*/
+  /*nav 메뉴
   .nav {
     position: relative;
     left: -67px;
@@ -260,7 +260,7 @@
     display: flex;
   }
   
-  /*햄버거버튼 css*/
+  /*햄버거버튼 css
   .icon {
 
     font-size: 25px;
@@ -268,7 +268,7 @@
 
   }
   
- /*nav 서브 리스트 */
+ /*nav 서브 리스트 
 .nav_list {
   position: absolute;
   top: 40px;
@@ -285,14 +285,14 @@
   color: black;
   font-size: 12px;
   margin-top: 3px;
-  transform: scale(1.0); /* 이미지 확대 */
-  transition: transform .5s; /* 시간 설정 */
+  transform: scale(1.0); /* 이미지 확대 
+  transition: transform .5s; /* 시간 설정 
 }
 
 .nav_list_item:hover {
   color: #666666;
-  transform: scale(1.1);   /* 이미지 확대 */
-    transition: transform .5s;  /* 시간 설정 */
+  transform: scale(1.1);   /* 이미지 확대 
+    transition: transform .5s;  /* 시간 설정 
 }
 
 .listItem_name {
@@ -301,7 +301,7 @@
   top: 6px;
 }
 
-/*nav_list 이미지 */
+/*nav_list 이미지 
 .nav_list_img  {
   width: 30px;
   display: flex;
@@ -309,4 +309,4 @@
   padding-bottom: 10px;
   padding-top: 5px;
 }
-}
+} */
