--- a/src/styles/css/pages/TopMenu.module.css
+++ b/src/styles/css/pages/TopMenu.module.css
@@ -78,7 +78,7 @@
   }
 }
 
-/*가로모드 모바일 디바이스*/
+/*가로모드 모바일 디바이스
 @media screen and (min-width: 576px) {
   .top_menu  {
     position: absolute;
@@ -102,3 +102,4 @@
      color: #000;
   }
 }
+*/
