--- a/src/styles/css/components/Banner/HeaderBan.module.css
+++ b/src/styles/css/components/Banner/HeaderBan.module.css
@@ -1,6 +1,8 @@
 /* HeaderBan.module.css */
 
- /* 상단 베너 */
+/* pc */
+@media screen and (min-width:1024px)  {
+   /* 상단 베너 */
  .banner {
   position: relative;
   left: 35px;
@@ -23,9 +25,74 @@
 
 .icon {
   position: absolute;
-  right: 30px;
-  top: 17px;
+  right: 19px;
+  top: 10px;
   cursor: pointer;
   z-index: 10;
  color: white; 
+}
+}
+
+/*테블릿*/
+@media screen and (min-width:768px) and (max-width:1023px) {
+    /* 상단 베너 */
+ .banner {
+  position: relative;
+  left: 35px;
+  top: 13px;
+  width: 100%;
+  max-width: 1190px;
+  height: 37px;
+  background-color: #008e61;
+} 
+
+ /*베너 텍스트*/
+ .banner_text{
+  text-align: center;
+  margin: 0 auto;
+  color: white;
+  padding-top: 10px;
+  font-size: 13px;
+  font-family: 'Noto Sans KR', sans-serif;
+}
+
+.icon {
+  position: absolute;
+  right: 19px;
+  top: 10px;
+  cursor: pointer;
+  z-index: 10;
+ color: white; 
+}
+}
+
+/*모바일*/
+@media screen and (max-width: 767px) {
+    /* 상단 베너 */
+ .banner {
+  position: relative;
+  left: 14px;
+  width: 100%;
+  height: 28px;
+  background-color: #008e61;
+} 
+
+ /*베너 텍스트*/
+ .banner_text{
+  text-align: center;
+  margin: 0 auto;
+  color: white;
+  padding-top: 7px;
+  font-size: 10px;
+  font-family: 'Noto Sans KR', sans-serif;
+}
+
+.icon {
+  position: absolute;
+  right: 19px;
+  top: 10px;
+  cursor: pointer;
+  z-index: 10;
+ color: white; 
+}
 }
