--- a/src/styles/css/pages/NavBar.module.css
+++ b/src/styles/css/pages/NavBar.module.css
@@ -7,17 +7,16 @@
 @media screen and (min-width:1024px)  {
   /*nav 메뉴*/
 .nav {
-  position: relative;
+  position: absolute;
   float: left;
-  left: 44px;
-  top: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 8px;
 }
 
 .tabmenu {
- margin-left:70px;
+ margin-left:34px;
  text-decoration: none;
  color: #666666;
  cursor: pointer;
@@ -41,8 +40,7 @@
 /*nav 서브 리스트 */
 .nav_list {
   position: absolute;
-  top: 35px;
-  left: 67px;
+  top: 32px;
   width: 174px;
   height: 375px;
   line-height: 35px;
@@ -84,12 +82,12 @@
 /*테블릿*/
 @media screen and (min-width:768px) and (max-width:1023px) {
   .nav {
-    position: relative;
-    right: 187px;
-    top: 10px;
+    position: absolute;
+    float: left;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 8px;
   }
   
   .tabmenu {
@@ -160,12 +158,11 @@
 @media screen and (max-width: 767px) {
   /*nav 메뉴*/
   .nav {
-    position: relative;
-    left: -67px;
-    top: 10px;
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 8px;
   }
   .tabmenu {
    margin-left:38px;
@@ -193,8 +190,7 @@
  /*nav 서브 리스트 */
 .nav_list {
   position: absolute;
-  top: 40px;
-  left: 103px;
+  top: 31px;
   width: 174px;
   height: 342px;
   line-height: 35px;
