신상품 아이템 추가 & 홈 베너 css 수정

--- a/src/styles/css/components/Home/NewItem.module.css
+++ b/src/styles/css/components/Home/NewItem.module.css
@@ -25,10 +25,10 @@
 
 .product {
   display: grid;
-  grid-template-columns: 230px 230px 230px;
+  grid-template-columns: 230px 230px 230px 230px 230px;
   max-width: 1230px;
   width: 56%;
-  margin: 0 auto;
+  margin: 0 42px;
 }
 
 .product_link {
@@ -110,7 +110,7 @@
   
   .product {
     display: grid;
-    grid-template-columns: 230px 230px 230px;
+    grid-template-columns: 230px 230px 230px 230px 230px;
     max-width: 1230px;
     width: 56%;
     margin: 0 auto;
@@ -195,7 +195,7 @@
   
   .product {
     display: grid;
-    grid-template-columns: 230px 230px 230px;
+    grid-template-columns: 230px 230px 230px 230px 230px;
     max-width: 1230px;
     width: 56%;
     margin: 0 auto;
