--- a/src/styles/css/commons/Button.module.css
+++ b/src/styles/css/commons/Button.module.css
@@ -38,3 +38,15 @@
   font-weight: 500;
   cursor: pointer;
 }
+
+.cart-pay-btn {
+  width: 100%;
+  height: 40px;
+  margin-top: 30px;
+  background: #333333;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-weight: 500;
+  cursor: pointer;
+}
