--- a/src/styles/css/components/Header/TemporaryHeader.module.css
+++ b/src/styles/css/components/Header/TemporaryHeader.module.css
@@ -1,8 +1,8 @@
 .header {
   height: 150px;
   margin: auto;
-  max-width: 1280px;
-  padding: 10px;
+  width: 90%;
+  max-width: 1300px;
 }
 .header--icon {
   float: right;
