베스트아이템 & 메인벤투 테블릿 반응형 수정

--- a/src/styles/css/components/Banner/MainBanTwo.module.css
+++ b/src/styles/css/components/Banner/MainBanTwo.module.css
@@ -3,6 +3,8 @@
 /*font*/
 @import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Sans+KR&display=swap');
 
+/* pc */
+@media screen and (min-width:1024px)  {
 .bantwo {
   display: flex ;
   justify-content: center;
@@ -67,4 +69,145 @@
   right: 20px;
   font-size: 26px;
   font-weight: 700;
+}
+}
+
+/*테블릿*/
+@media screen and (min-width:768px) and (max-width:1023px) {
+  .bantwo {
+    position: relative;
+    top: 22px;
+    display: flex;
+    justify-content: center;
+    /* width: 1230px; */
+    max-width: 1190px;
+    height: 450px;
+  }
+  
+  .bantwo_eve {
+    display: flex;
+    width: 80%;
+    margin-top: 40px;
+    height: 195px;
+  
+  } 
+  
+  .bantwo_pro {
+    display: flex;
+    margin-right: 41px;
+  }
+  .bantwo_img {
+    z-index: 10;
+    height: 195px;
+  }
+  
+  .bantwo_img_1 {
+    width: 241px;
+    height: 200px;
+    border-radius: 19px;
+  }
+  
+  .bantwo_info {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 256px;
+    margin-left: -51px;
+    background-color: whitesmoke;
+    border-radius: 19px;
+    font-family: 'Noto Sans KR', sans-serif;
+  }
+  
+  .info1 {
+    position: absolute;
+    top: 57px;
+    right: 20px;
+    font-size: 11px;
+    color: crimson;
+    font-weight: 700;
+  }
+  
+  .info2 {
+    position: absolute;
+    top: 76px;
+    right: 20px;
+    font-size: 21px;
+  }
+  
+  .info3 {
+    position: absolute;
+    top: 118px;
+    right: 20px;
+    font-size: 23px;
+    font-weight: 700;
+  }
+}
+
+/*모바일*/
+@media screen and (max-width: 767px) {
+  .bantwo {
+    display: flex ;
+    justify-content: center;
+    width: 1230px;
+    height: 370px;
+    margin: 0 auto;
+  }
+  
+  .bantwo_eve {
+    display: flex;
+    max-width: 100%;
+    margin-top: 40px;
+    height: 195px;
+  
+  } 
+  
+  .bantwo_pro {
+    display: flex;
+    margin-right: 41px;
+  }
+  .bantwo_img {
+    z-index: 10;
+    height: 195px;
+  }
+  
+  .bantwo_img_1 {
+    width: 337px;
+    height: 195px;
+    border-radius: 19px;
+  }
+  
+  .bantwo_info {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    margin-left: -42px;
+    background-color: whitesmoke;
+    border-radius: 19px;
+    font-family: 'Noto Sans KR', sans-serif;
+  }
+  
+  .info1 {
+    position: absolute;
+    top: 57px;
+    right: 20px;
+    font-size: 11px;
+    color: crimson;
+    font-weight: 700;
+  }
+  
+  .info2 {
+    position: absolute;
+    top: 76px;
+    right: 20px;
+    font-size: 24px;
+  }
+  
+  .info3 {
+    position: absolute;
+    top: 118px;
+    right: 20px;
+    font-size: 26px;
+    font-weight: 700;
+  }
 }
