--- a/src/styles/css/components/Banner/MainBanTwo.module.css
+++ b/src/styles/css/components/Banner/MainBanTwo.module.css
@@ -81,12 +81,12 @@
     justify-content: center;
     /* width: 1230px; */
     max-width: 1190px;
-    height: 450px;
+    height: 337px;
   }
   
   .bantwo_eve {
     display: flex;
-    width: 80%;
+    width: 92%;
     margin-top: 40px;
     height: 195px;
   
@@ -146,16 +146,18 @@
 /*모바일*/
 @media screen and (max-width: 767px) {
   .bantwo {
-    display: flex ;
+    position: relative;
+    top: 22px;
+    display: flex;
     justify-content: center;
-    width: 1230px;
-    height: 370px;
-    margin: 0 auto;
+    /* width: 1230px; */
+    max-width: 1190px;
+    height: 337px;
   }
   
   .bantwo_eve {
     display: flex;
-    max-width: 100%;
+    width: 92%;
     margin-top: 40px;
     height: 195px;
   
@@ -171,8 +173,8 @@
   }
   
   .bantwo_img_1 {
-    width: 337px;
-    height: 195px;
+    width: 241px;
+    height: 200px;
     border-radius: 19px;
   }
   
@@ -180,8 +182,8 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    width: 300px;
-    margin-left: -42px;
+    width: 256px;
+    margin-left: -51px;
     background-color: whitesmoke;
     border-radius: 19px;
     font-family: 'Noto Sans KR', sans-serif;
@@ -200,14 +202,14 @@
     position: absolute;
     top: 76px;
     right: 20px;
-    font-size: 24px;
+    font-size: 21px;
   }
   
   .info3 {
     position: absolute;
     top: 118px;
     right: 20px;
-    font-size: 26px;
+    font-size: 23px;
     font-weight: 700;
   }
 }
