--- a/src/styles/css/components/Home/NewItem.module.css
+++ b/src/styles/css/components/Home/NewItem.module.css
@@ -175,15 +175,12 @@
   .newitem {
     position: relative;
     width: 1230px;
-    height: 500px;
-    /* background-color: #008e61; */
-    margin: 0 auto;
+    height: 800px;
   }
   
   .header_text {
     position: relative;
     width: 1100px;
-    margin: 0 auto;
     font-size: 18px;
     font-weight: bold;
     text-align: center;
@@ -192,9 +189,9 @@
   
   .product {
     display: grid;
-    grid-template-columns: 230px 230px 230px 230px 230px;
+    grid-template-columns: 230px 230px 230px;
     max-width: 1230px;
-    width: 56%;
+    width: 65%;
     margin: 0 auto;
   }
   
