--- a/src/styles/css/pages/Home.module.css
+++ b/src/styles/css/pages/Home.module.css
@@ -64,15 +64,14 @@
   .home_ban {
     display: flex;
     height: 370px;
-    width: 100%;
+    width: 83%;
     max-width: 1190px;
-    margin-top: 40px;
     margin: 0 auto;
   }
-
-
+  
   .home_ban_img {
-    max-width: 595px;
+    max-width: 400px;
+    height: 261px;
     margin: 0 10px;
   }
 }
