--- a/src/styles/css/commons/Button.module.css
+++ b/src/styles/css/commons/Button.module.css
@@ -1,3 +1,4 @@
+.modify-membere__btn,
 .localUser-join__footer-btn,
 .localUser-login__footer-btn {
   width: 100%;
@@ -7,6 +8,7 @@
   max-width: 800px;
 }
 
+.modify-membere__btn,
 .localUser-login__footer-btn,
 .localUser-join__footer-btn {
   height: 40px;
@@ -43,4 +45,8 @@
     width: 100%;
     margin-top: 10px;
   }
+}
+
+.modify-membere__btn {
+  max-width: 400px;
 }
