--- a/src/styles/css/components/ModifyMemberInfo/ModifyInputList.module.css
+++ b/src/styles/css/components/ModifyMemberInfo/ModifyInputList.module.css
@@ -7,6 +7,10 @@
   position: relative;
 }
 
+.modify-password__list > label {
+  margin-bottom: 10px;
+}
+
 .delivery-register__list:nth-child(3) {
   margin-top: 30px;
 }
