--- a/src/styles/css/components/Header/Header.module.css
+++ b/src/styles/css/components/Header/Header.module.css
@@ -8,20 +8,18 @@
 @media screen and (min-width:1024px)  {
   .header {
     z-index: 30;
-    position: relative;
+    position: fixed; /*픽스로 고정*/
     margin: 0 auto;
-    top: -93px;
     width: 100%;
-    max-width: 1259px;
-    height: 202px;
+    max-width: 1200px;
     background-color: #fff;
   }
   
-  .contents {
+  .logo {
     display: flex;
-    width: 95%;
     height: 110px;
-    max-width: 1195px;
+    width: 100%;
+    max-width: 1200px;
     margin: 0 auto;
     padding-top: 45px;
     align-items: center;
@@ -29,7 +27,7 @@
     border-bottom: 2px solid #918D8C;
   }
   
-  .logo {
+  .logo_text {
     font-family: 'Nanum Pen Script', cursive;
     font-size: 45px;
     margin: 0 auto;
@@ -39,22 +37,20 @@
 
 /*테블릿*/
 @media screen and (min-width:768px) and (max-width:1023px) {
-    .header {
-      z-index: 30;
-      position: relative;
-      margin: 0 auto;
-      top: -93px;
-      width: 100%;
-      max-width: 1259px;
-      height: 202px;
-      background-color: #fff;
+  .header {
+    z-index: 30;
+    position: fixed; /*픽스로 고정*/
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1200px;
+    background-color: #fff;
   }
   
-  .contents {
+  .logo {
     display: flex;
-    width: 95%;
     height: 110px;
-    max-width: 1195px;
+    width: 100%;
+    max-width: 1200px;
     margin: 0 auto;
     padding-top: 45px;
     align-items: center;
@@ -62,13 +58,12 @@
     border-bottom: 2px solid #918D8C;
   }
   
-  .logo {
+  .logo_text {
     font-family: 'Nanum Pen Script', cursive;
     font-size: 45px;
     margin: 0 auto;
     color: #008e61;
   }
-  
   
 } 
 
@@ -83,24 +78,24 @@
   height: 150px;
   background-color: #fff;
 }
+.logo {
+  display: flex;
+  height: 110px;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-top: 45px;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 2px solid #918D8C;
+}
 
-  .logo {
-    position: relative;
-    font-family: 'Nanum Pen Script', cursive;
-    font-size: 33px;
-    margin: 0 auto;
-    color: #008e61;
-  }
-  .contents {
-    display: block;
-    width: 95%;
-    max-width: 1100px;
-    margin: 0 auto;
-    padding-top: 13px;
-    padding-bottom: 30px;
-    border-bottom: 2px solid #918D8C;
-  }
-  
+.logo_text {
+  font-family: 'Nanum Pen Script', cursive;
+  font-size: 45px;
+  margin: 0 auto;
+  color: #008e61;
+}
 }
 
 /*가로모드 모바일 디바이스
