--- a/src/styles/css/pages/Home.module.css
+++ b/src/styles/css/pages/Home.module.css
@@ -1,12 +1,11 @@
-/*Home.module.css*/
-/* pc */
+
 @media screen and (min-width:1024px)  {
   .home {
     padding-top: 80px;
   }
   
   .main {
-    min-height: calc(100vh - 180px);
+   min-height: calc(100vh - 180px);
   }
 
   .home_ban {
@@ -24,7 +23,6 @@
   }
 }
 
-/*테블릿*/
 @media screen and (min-width:768px) and (max-width:1023px) {
   .home {
     padding-top: 80px;
@@ -38,7 +36,7 @@
     display: flex;
     align-items: center;
     height: 370px;
-    /* width: 83%; */
+    width: 83%; 
     max-width: 1190px;
     margin: 0 auto;
   }
@@ -51,7 +49,7 @@
   }
 }
 
-/*모바일*/
+
 @media screen and (max-width: 767px) {
   .home {
     padding-top: 80px;
@@ -63,7 +61,6 @@
 
   .home_ban {
     display: flex;
-  
     height: 370px;
     width: 83%;
     max-width: 1190px;
@@ -75,4 +72,4 @@
     height: 150px;
     margin: 0 10px;
   }
-}
+} 
