--- a/src/styles/css/pages/NavBar.module.css
+++ b/src/styles/css/pages/NavBar.module.css
@@ -7,7 +7,7 @@
 @media screen and (min-width:1024px)  {
   /*nav 메뉴*/
 .nav {
-  position: absolute;
+  position: relative;
   float: left;
   display: flex;
   justify-content: center;
@@ -77,12 +77,38 @@
   padding-bottom: 10px;
   padding-top: 5px;
 }
+
+.navbar_box {
+  float: right;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5px;
+  }
+
+  .navbar_box_icon {
+    margin-left:19px;
+    text-decoration: none;
+    color: #666666;
+    cursor: pointer;
+    font-size: 25px;
+    font-family: 'Noto Sans KR', sans-serif;
+   }
+  
+   /*검색 아이콘*/
+  .icon1 {
+    position: absolute;
+    right: 101px;
+    color: #dddddd;
+    cursor: pointer;
+  }
+
 }
 
 /*테블릿*/
 @media screen and (min-width:768px) and (max-width:1023px) {
   .nav {
-    position: absolute;
+    position: relative;
     float: left;
     display: flex;
     justify-content: center;
@@ -152,47 +178,74 @@
   padding-bottom: 10px;
   padding-top: 5px;
 }
+
+.navbar_box {
+  float: right;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5px;
+  }
+
+  .navbar_box_icon {
+    margin-left:19px;
+    text-decoration: none;
+    color: #666666;
+    cursor: pointer;
+    font-size: 25px;
+    font-family: 'Noto Sans KR', sans-serif;
+   }
+  
+   /*검색 아이콘*/
+  .icon1 {
+    position: absolute;
+    right: 101px;
+    color: #dddddd;
+    cursor: pointer;
+  }
+
 }
 
 /*모바일*/
 @media screen and (max-width: 767px) {
-  /*nav 메뉴*/
-  .nav {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 8px;
-  }
-  .tabmenu {
-   margin-left:38px;
-   text-decoration: none;
-   color: #666666;
-   cursor: pointer;
-   font-size: 15px;
-   font-family: 'Noto Sans KR', sans-serif;
-  }
-  
-  .tabmenu1 {
-    color: #008e61;
-    font-weight: 600;
-    display: flex;
-  }
-  
-  /*햄버거버튼 css*/
-  .icon {
+   /*nav 메뉴*/
+.nav {
+  position: relative;
+  float: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 8px;
+}
 
-    font-size: 25px;
-    padding-right: 5px;
+.tabmenu {
+ margin-left:34px;
+ text-decoration: none;
+ color: #666666;
+ cursor: pointer;
+ font-size: 15px;
+ font-family: 'Noto Sans KR', sans-serif;
+}
 
-  }
-  
- /*nav 서브 리스트 */
+.tabmenu1 {
+  display: flex;
+  color: #008e61;
+  font-weight: 600;
+}
+
+/*햄버거버튼 css*/
+.icon {
+  font-size: 25px;
+  padding-right: 5px;
+ 
+}
+
+/*nav 서브 리스트 */
 .nav_list {
   position: absolute;
-  top: 31px;
+  top: 32px;
   width: 174px;
-  height: 342px;
+  height: 375px;
   line-height: 35px;
   padding-left: 10px;
   border: 1px solid #ddd;
@@ -201,7 +254,7 @@
 
 .nav_list_item {
   color: black;
-  font-size: 12px;
+  font-size: 14px;
   margin-top: 3px;
   transform: scale(1.0); /* 이미지 확대 */
   transition: transform .5s; /* 시간 설정 */
@@ -221,12 +274,38 @@
 
 /*nav_list 이미지 */
 .nav_list_img  {
-  width: 30px;
+  width: 35px;
   display: flex;
   flex-direction: column;
   padding-bottom: 10px;
   padding-top: 5px;
 }
+
+.navbar_box {
+  float: right;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5px;
+  }
+
+  .navbar_box_icon {
+    margin-left:19px;
+    text-decoration: none;
+    color: #666666;
+    cursor: pointer;
+    font-size: 25px;
+    font-family: 'Noto Sans KR', sans-serif;
+   }
+  
+    /*검색 아이콘*/
+  .icon1 {
+    position: absolute;
+    right: 101px;
+    color: #dddddd;
+    cursor: pointer;
+  }
+
   
 }
 
