--- a/src/styles/css/commons/Input.module.css
+++ b/src/styles/css/commons/Input.module.css
@@ -10,6 +10,7 @@
   border-radius: 15px;
   border : 1px solid #dddddd;
  }
+
 }
 
 /*테블릿*/
@@ -21,6 +22,9 @@
     border-radius: 15px;
     border : 1px solid #dddddd;
    }
+ 
+  
+
 }
 
 
@@ -28,7 +32,7 @@
 @media screen and (max-width: 767px) {
   /*검색창*/
   .searchInput {
-    display: block;
+    display: none;
     width: 200px;
     height: 27px;
     border-radius: 15px;
