--- a/src/styles/css/components/Header/Header.module.css
+++ b/src/styles/css/components/Header/Header.module.css
@@ -8,7 +8,7 @@
 @media screen and (min-width:1024px)  {
   .header {
     z-index: 30;
-    position: fixed; /*픽스로 고정*/
+    position: relative; /*픽스로 고정*/
     margin: 0 auto;
     width: 100%;
     max-width: 1200px;
@@ -39,7 +39,7 @@
 @media screen and (min-width:768px) and (max-width:1023px) {
   .header {
     z-index: 30;
-    position: fixed; /*픽스로 고정*/
+    position: relative; /*픽스로 고정*/
     margin: 0 auto;
     width: 100%;
     max-width: 1200px;
@@ -70,10 +70,8 @@
 /*모바일*/
 @media screen and (max-width: 767px) {
   .header {
-  position: fixed;
+  position: relative;
   z-index: 30;
-  left: 0;
-  top: 0;
   width: 100%;
   height: 150px;
   background-color: #fff;
