--- a/src/styles/css/components/Header/Header.module.css
+++ b/src/styles/css/components/Header/Header.module.css
@@ -52,7 +52,7 @@
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-    padding-top: 45px;
+    padding-top: 30px;
     align-items: center;
     justify-content: space-between;
     border-bottom: 2px solid #918D8C;
@@ -68,7 +68,7 @@
 } 
 
 /*모바일*/
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 787px) {
   .header {
   position: relative;
   z-index: 30;
@@ -78,11 +78,11 @@
 }
 .logo {
   display: flex;
-  height: 110px;
+  height: 94px;
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
-  padding-top: 45px;
+  padding-top: 13px;
   align-items: center;
   justify-content: space-between;
   border-bottom: 2px solid #918D8C;
@@ -96,29 +96,32 @@
 }
 }
 
-/*가로모드 모바일 디바이스
-@media screen and (min-width: 576px) {
-  .header {
-    position: relative;
-    top: -93px;
-    width: 100%;
-    max-width: 600px;
-    height: 200px;
-    background-color: #fff;
+/* 아이폰 SE  */
+@media screen and (max-width : 576px) {
+    .header {
+  position: relative;
+  z-index: 30;
+  width: 100%;
+  height: 150px;
+  background-color: #fff;
 }
-
-.contents {
-  width: 95%;
-  height: 110px;
-  max-width:600px;
-  padding-top: 15px;
+.logo {
+  display: flex;
+  height: 94px;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-top: 13px;
+  align-items: center;
+  justify-content: space-between;
   border-bottom: 2px solid #918D8C;
 }
 
-.logo {
+.logo_text {
   font-family: 'Nanum Pen Script', cursive;
   font-size: 45px;
+  margin: 0 auto;
   color: #008e61;
 }
 }
-*/
+
