--- a/src/styles/css/components/Footer/Footer.module.css
+++ b/src/styles/css/components/Footer/Footer.module.css
@@ -12,7 +12,7 @@
   width: 100%;
   height: 110px;
   margin-top: auto;
- background-color: #fff;
+  background-color: #fff;
 }
 
 .contents {
@@ -47,15 +47,17 @@
    font-family: 'Noto Sans KR', sans-serif;
 }
 
-@media screen and (max-width: 768px) {
+/* 아이폰 SE  */
+@media screen and (max-width : 576px) {
   .footer {
-    position: fixed;
+    z-index: 20;
+    position: relative;
     left: 0;
     bottom: 0;
     width: 100%;
     height: 110px;
     margin-top: auto;
-   /*background-color: #ddd; */
+   background-color: #fff;
   }
   
   .contents {
@@ -64,7 +66,7 @@
     justify-content: center;
     color: #666666;
     padding-bottom: 10px;
-   font-size: 13px;
+   font-size: 7px;
    font-family: 'Noto Sans KR', sans-serif;
    border-bottom: 1px solid #ddd;
   }
@@ -73,10 +75,10 @@
     padding-left: 15px;
   }
   
-  .logo {
+  .fot_logo {
       width: 81px;
       font-family: 'Nanum Pen Script', cursive;
-      font-size: 27px;
+      font-size: 25px;
       margin: 0 auto;
       color: #008e61;
   }
@@ -84,9 +86,9 @@
   .desccontainer {
      display: flex;
      justify-content: center;
-     font-size: 10px;
+     font-size: 5px;
      color: #666666;
-     padding-top: 11px;
+     padding-top: 13px;
      font-family: 'Noto Sans KR', sans-serif;
   }
 }
