--- a/src/styles/css/components/Category/Category.module.css
+++ b/src/styles/css/components/Category/Category.module.css
@@ -4,11 +4,9 @@
 @media screen and (min-width:1024px)  {
   .category {
     position: relative;
-    top: -45px;
     width: 1200px;
     height: 200px;
     margin: 0 auto;
-    
   }
   
   .category_ul {
@@ -44,7 +42,6 @@
 @media screen and (min-width:768px) and (max-width:1023px) {
     .category {
       position: relative;
-      top: -30px;
       max-width:1200px;
       height: 200px;
       margin: 0 auto;
@@ -84,15 +81,15 @@
 /*모바일*/
 @media screen and (max-width: 768px) {
   .category {
-    width: 600px;
+    position: relative;
+    width: 1200px;
     height: 200px;
-    /* margin: 0 auto; */
-    padding-top: 13px;
+    margin: 0 auto;
   }
   
   .category_ul {
     display: grid;
-    grid-template-columns: 120px 120px 120px 120px;
+    grid-template-columns: 120px 120px 120px 120px 120px;
     line-height: 25px;
     margin-left: -39px;
   }
@@ -122,44 +119,7 @@
   }
 }
 
-/*가로모드 모바일 디바이스
-@media screen and (min-width: 576px) {
-  .category {
-    width: 600px;
-    height: 200px;
-    /* margin: 0 auto; 
-    padding-top: 13px;
-  }
-  
-  .category_ul {
-    display: grid;
-    grid-template-columns: 120px 120px 120px 120px;
-    line-height: 25px;
-    margin-left: -39px;
-  }
-  
-  .category_item {
-    text-align: center;
-    margin: 0 auto;
-    width: 53px;
-    padding-bottom: 10px;
-    list-style-type : none;
-    
-  }
-  
-  .category_link {
-    text-decoration: none;
-    color: #666666;
-    font-size: 12px;
-    margin: 0 auto;
-  }
-  
-  .category_img {
-    width: 50px;
-    height: 50px;
-    margin: 0 auto;
-    text-align: center;
-    border-radius: 50%;
-  }
+/* 아이폰 SE  */
+@media screen and (max-width : 576px) {
+
 }
-*/
