--- a/src/styles/css/components/Category/Category.module.css
+++ b/src/styles/css/components/Category/Category.module.css
@@ -82,17 +82,17 @@
 @media screen and (max-width: 768px) {
   .category {
     position: relative;
-    width: 1200px;
+    max-width:1200px;
     height: 200px;
     margin: 0 auto;
-  }
-  
-  .category_ul {
-    display: grid;
-    grid-template-columns: 120px 120px 120px 120px 120px;
-    line-height: 25px;
-    margin-left: -39px;
-  }
+}
+
+.category_ul {
+  display: flex;
+  line-height: 23px;
+  margin-left: -34px;
+}
+
   
   .category_item {
     text-align: center;
@@ -117,9 +117,4 @@
     text-align: center;
     border-radius: 50%;
   }
-}
-
-/* 아이폰 SE  */
-@media screen and (max-width : 576px) {
-
 }
