--- a/src/styles/css/pages/Home.module.css
+++ b/src/styles/css/pages/Home.module.css
@@ -1,3 +1,4 @@
+/*Home.module.css*/
 
 @media screen and (min-width:1024px)  {
   .home {
@@ -48,7 +49,6 @@
     margin: 0 10px;
   }
 }
-
 
 @media screen and (max-width: 767px) {
   .home {
