--- a/src/styles/css/components/Banner/MainSlides.module.css
+++ b/src/styles/css/components/Banner/MainSlides.module.css
@@ -4,6 +4,7 @@
 @media screen and (min-width:1024px)  {
   .slides {
     position: relative;
+    top: 10px;
     max-width: 1200px;
     margin: 0 auto;
    
@@ -14,6 +15,7 @@
 @media screen and (min-width:768px) and (max-width:1023px) {
   .slides {
     position: relative;
+    top: 10px;
     max-width: 1200px;
     margin: 0 auto;
 }
@@ -23,9 +25,9 @@
 @media screen and (max-width: 768px) {
   .slides {
     position: relative;
+    top: 10px;
     max-width: 1200px;
-     margin: 0 auto;
-     margin-top: 93px;
+    margin: 0 auto;
   }
 }
 
