--- a/src/styles/css/commons/Button.module.css
+++ b/src/styles/css/commons/Button.module.css
@@ -61,6 +61,7 @@
   font-weight: 500;
   cursor: pointer;
   margin-right: 45px;
+  font-size: 15px;
 }
 
 .bag-inside-btn {
@@ -72,6 +73,7 @@
   color: white;
   font-weight: 500;
   cursor: pointer;
+  font-size: 15px;
 }
 
 .cart-pay-btn {
@@ -84,4 +86,19 @@
   color: white;
   font-weight: 500;
   cursor: pointer;
+}
+
+.cart-btn-count {
+  border-radius: 50%;
+  background: white;
+  border: 1px solid #B9B9B9;
+  padding : 10px;
+  width: 30px;
+  height: 30px;
+  font-size: 30px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #2c2c2c;
 }
