Component: Title컴포넌트로 바꿔와서 수정
Component: Title컴포넌트로 바꿔와서 수정

--- a/src/styles/css/commons/Title.module.css
+++ b/src/styles/css/commons/Title.module.css
@@ -7,3 +7,14 @@
   text-align: center;
   font-size: 23px;
 }
+
+.product-title {
+  font-size: 30px;
+  margin-bottom: 37px;
+  font-weight: 600;
+}
+
+.mypage-title {
+  font-size: 30px;
+  font-weight: 600;
+}
