헤더 경로 설정 & 헤더 css , 반응형 수정

--- a/src/styles/css/commons/Title.module.css
+++ b/src/styles/css/commons/Title.module.css
@@ -1,5 +1,6 @@
 /* Tiile.module.css */
 
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Sans+KR&display=swap');
 /*상단 베너*/
 .banner_text {
   position: fixed;
