--- a/src/styles/css/components/Category/Category.module.css
+++ b/src/styles/css/components/Category/Category.module.css
@@ -4,6 +4,7 @@
 @media screen and (min-width:1024px)  {
   .category {
     position: relative;
+    top: 25px;
     width: 1200px;
     height: 200px;
     margin: 0 auto;
@@ -42,6 +43,7 @@
 @media screen and (min-width:768px) and (max-width:1023px) {
     .category {
       position: relative;
+      top: 25px;
       max-width:1200px;
       height: 200px;
       margin: 0 auto;
@@ -82,6 +84,7 @@
 @media screen and (max-width: 768px) {
   .category {
     position: relative;
+    top: 25px;
     max-width:1200px;
     height: 200px;
     margin: 0 auto;
