--- a/src/styles/css/components/Footer/Footer.module.css
+++ b/src/styles/css/components/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 /*Footer.module.css*/
 
-@import url('../../../font/font.module.css');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Sans+KR&display=swap');
 
 .footer {
   z-index: 20;
