--- a/src/styles/css/pages/TopMenu.module.css
+++ b/src/styles/css/pages/TopMenu.module.css
@@ -1,7 +1,6 @@
 /*TopMenu.module.css*/
 
-/*font*/
-@import url('../../font/font.module.css');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&family=Noto+Sans+KR&display=swap');
 
 /* pc */
 @media screen and (min-width:1024px)  {
