--- a/src/styles/css/components/Category/SnackSlide.module.css
+++ b/src/styles/css/components/Category/SnackSlide.module.css
@@ -6,18 +6,14 @@
 /* pc */
 @media screen and (min-width:1024px)  {
   .snack_Slide {
-  position: relative;
-  width: 1230px;
-  height: 500px;
-  /* background-color: #008e61; */
-  margin: 0 auto;
-  padding-top: 110px;
+    position: relative;
+    max-width: 1200px;
+    height: 500px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .snack_Slide_hea {
-  position: relative;
-  width: 1100px;
-  margin: 0 auto;
   font-size: 18px;
   font-weight: bold;
   text-align: center;
@@ -25,15 +21,14 @@
 }
 
 .snack_Slide_prd{
-  display: grid;
-  grid-template-columns: 230px 230px 230px 230px 230px;
-  margin-left: 55px;
+  display: flex;
+  justify-content: center;
 }
 
 .product_link {
   height: 340px;
-  /* background-color: #fff; */
   text-decoration: none;
+  margin-right: 23px;
   color: #000;
   font-family: 'Noto Sans KR', sans-serif;
 }
@@ -89,38 +84,33 @@
 
 /*테블릿*/
 @media screen and (min-width:768px) and (max-width:1023px) {
-  .snack_Slide{
+  .snack_Slide {
     position: relative;
-    width: 1230px;
-    height: 800px;
-    /* background-color: #008e61; */
+    max-width: 1200px;
+    height: 500px;
+    width: 100%;
     margin: 0 auto;
-  }
+}
+
+.snack_Slide_hea {
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  color: #333;
+}
+
+.snack_Slide_prd{
+  display: flex;
+  justify-content: center;
+}
   
-  .snack_Slide_hea {
-    position: relative;
-    width: 1100px;
-    font-size: 18px;
-    font-weight: bold;
-    text-align: center;
-    color: #333;
-  }
-  
-  .snack_Slide_prd {
-    display: grid;
-    grid-template-columns: 230px 230px 230px;
-    max-width: 1230px;
-    width: 69%;
-    margin: 0 auto;
-  }
-  
-  .product_link {
-    height: 340px;
-    /* background-color: #fff; */
-    text-decoration: none;
-    color: #000;
-    font-family: 'Noto Sans KR', sans-serif;
-  }
+.product_link {
+  height: 340px;
+  text-decoration: none;
+  margin-right: 23px;
+  color: #000;
+  font-family: 'Noto Sans KR', sans-serif;
+}
   
   .product_img {
     display: flex;
@@ -173,38 +163,33 @@
 
 /*모바일*/
 @media screen and (max-width: 767px) {
-  .snack_Slide{
+  .snack_Slide {
     position: relative;
-    width: 1230px;
-    height: 800px;
-    /* background-color: #008e61; */
+    max-width: 1200px;
+    height: 500px;
+    width: 100%;
     margin: 0 auto;
-  }
+}
+
+.snack_Slide_hea {
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  color: #333;
+}
+
+.snack_Slide_prd{
+  display: flex;
+  justify-content: center;
+}
   
-  .snack_Slide_hea {
-    position: relative;
-    width: 1100px;
-    font-size: 18px;
-    font-weight: bold;
-    text-align: center;
-    color: #333;
-  }
-  
-  .snack_Slide_prd {
-    display: grid;
-    grid-template-columns: 230px 230px 230px;
-    max-width: 1230px;
-    width: 69%;
-    margin: 0 auto;
-  }
-  
-  .product_link {
-    height: 340px;
-    /* background-color: #fff; */
-    text-decoration: none;
-    color: #000;
-    font-family: 'Noto Sans KR', sans-serif;
-  }
+.product_link {
+  height: 340px;
+  text-decoration: none;
+  margin-right: 23px;
+  color: #000;
+  font-family: 'Noto Sans KR', sans-serif;
+}
   
   .product_img {
     display: flex;
