--- a/src/styles/css/components/Home/BestItem.module.css
+++ b/src/styles/css/components/Home/BestItem.module.css
@@ -6,17 +6,14 @@
 /* pc */
 @media screen and (min-width:1024px)  {
   .bestitem {
-  position: relative;
-  width: 1230px;
-  height: 500px;
-  /* background-color: #008e61; */
-  margin: 0 auto;
+    position: relative;
+    max-width: 1200px;
+    height: 500px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .header_text {
-  position: relative;
-  width: 1100px;
-  margin: 0 auto;
   font-size: 18px;
   font-weight: bold;
   text-align: center;
@@ -24,17 +21,14 @@
 }
 
 .product {
-  display: grid;
-  grid-template-columns: 230px 230px 230px 230px 230px;
-  max-width: 1230px;
-  width: 56%;
-  margin: 0 42px;
+  display: flex;
+  justify-content: center;
 }
 
 .product_link {
   height: 340px;
-  /* background-color: #fff; */
   text-decoration: none;
+  margin-right: 23px;
   color: #000;
   font-family: 'Noto Sans KR', sans-serif;
 }
@@ -92,35 +86,31 @@
 @media screen and (min-width:768px) and (max-width:1023px) {
   .bestitem {
     position: relative;
-    width: 1230px;
-    height: 720px;
+    max-width: 1200px;
+    height: 500px;
+    width: 100%;
     margin: 0 auto;
-  }
+}
+
+.header_text {
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  color: #333;
+}
+
+.product {
+  display: flex;
+  justify-content: center;
+}
   
-  .header_text {
-    position: relative;
-    width: 1100px;
-    font-size: 18px;
-    font-weight: bold;
-    text-align: center;
-    color: #333;
-  }
-  
-  .product {
-    display: grid;
-    grid-template-columns:230px 230px 230px;
-    max-width: 1230px;
-    width: 69%;
-    margin: 0 auto;
-  }
-  
-  .product_link {
-    height: 340px;
-    /* background-color: #fff; */
-    text-decoration: none;
-    color: #000;
-    font-family: 'Noto Sans KR', sans-serif;
-  }
+.product_link {
+  height: 340px;
+  text-decoration: none;
+  margin-right: 23px;
+  color: #000;
+  font-family: 'Noto Sans KR', sans-serif;
+}
   
   .product_img {
     display: flex;
@@ -175,35 +165,31 @@
 @media screen and (max-width: 767px) {
   .bestitem {
     position: relative;
-    width: 1230px;
-    height: 720px;
+    max-width: 1200px;
+    height: 500px;
+    width: 100%;
     margin: 0 auto;
-  }
+}
+
+.header_text {
+  font-size: 18px;
+  font-weight: bold;
+  text-align: center;
+  color: #333;
+}
+
+.product {
+  display: flex;
+  justify-content: center;
+}
   
-  .header_text {
-    position: relative;
-    width: 1100px;
-    font-size: 18px;
-    font-weight: bold;
-    text-align: center;
-    color: #333;
-  }
-  
-  .product {
-    display: grid;
-    grid-template-columns:230px 230px 230px;
-    max-width: 1230px;
-    width: 69%;
-    margin: 0 auto;
-  }
-  
-  .product_link {
-    height: 340px;
-    /* background-color: #fff; */
-    text-decoration: none;
-    color: #000;
-    font-family: 'Noto Sans KR', sans-serif;
-  }
+.product_link {
+  height: 340px;
+  text-decoration: none;
+  margin-right: 23px;
+  color: #000;
+  font-family: 'Noto Sans KR', sans-serif;
+}
   
   .product_img {
     display: flex;
